@@ -1,8 +1,8 @@
-TESTS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys
+TESTS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys timeSeg
 
 INCLUDES = -I$(top_srcdir)
 
-check_PROGRAMS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys
+check_PROGRAMS = mercatortest testTerrain testShader testTerrainMod testIntersect testPhys timeSeg
 
 mercatortest_SOURCES = main.cpp
 mercatortest_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
@@ -21,3 +21,6 @@ testIntersect_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
 
 testPhys_SOURCES = testPhys.cpp
 testPhys_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
+
+timeSeg_SOURCES = timeSeg.cpp
+timeSeg_LDADD = -L$(top_builddir)/Mercator -lmercator-0.2
